Combine styling and prevent header and main from overlapping

--- a/docs/styles/sticky.css
+++ b/docs/styles/sticky.css
@@ -1,8 +1,3 @@
-body {
-    margin: 0px;
-    font: 100% Source Code Pro, Inconsolata, Menlo, monospace;
-}
-
 h1 {
     font-size: 2em;
     margin: 0em 0em 0.5em 0em;
@@ -13,18 +8,7 @@ h2 {
 }
 
 :root {
-    --box-height: 450px;
-}
-
-.chart {
-    height: calc(100vh - var(--box-height));
-    display: block;
-    background-color: rgb(255, 255, 255);
-    left: 0;
-    z-index: 9999;
-    width: 100%;
-    position: fixed;
-    top: 0px;
+    --box-height: 50vh;
 }
 
 .info {
@@ -33,12 +17,8 @@ h2 {
     width: 100%;
 }
 
-.data-current-year {
-    height: 79vh;
-}
-
 .data-current-year section {
-    height: 40vh;
+    height: 80vh;
     min-height: var(--box-height);
     display: flex;
     flex-direction: row;
@@ -47,8 +27,7 @@ h2 {
 }
 
 .data-current-year section section {
-    height: 40vh;
-    min-height: var(--box-height);
+    height: var(--box-height);
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -84,9 +63,9 @@ svg {
 
 h2.color {
     position: absolute;
-    top: 18%;
-    right: -85px;
-    transform: rotate(90deg);
+    top: .2em;
+    right: 0;
+    writing-mode: vertical-lr;
     font-size: 3em;
 }
 
@@ -99,16 +78,16 @@ iframe {
 @media screen and (max-width: 1024px) {
     .data-current-year section {
         flex-direction: column;
-        top: 40vh;
+        top: calc(100vh - var(--box-height));
         height: fit-content;
     }
 
     .chart {
-        height: 40vh;
+        height: calc(100vh - var(--box-height);
     }
 
     .info {
-        margin-top: 40vh;
+        margin-top: calc(100vh - var(--box-height));
     }
 
     .data-current-year {
@@ -120,10 +99,6 @@ iframe {
     }
 
     h2.color {
-        position: absolute;
-        top: 18%;
-        right: -89px;
-        transform: rotate(90deg);
         font-size: 4em;
     }
 }
